# hearth

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.githooks/: pre-commit
scripts/: hearth-app-launch.sh  install-app.sh  uninstall-app.sh
src/hearth/: __init__.py  app.py  cli.py  config.py  desktop.py  hardware.py  middleware.py  ollama_supervisor.py
src/hearth/backends/: __init__.py  base.py  ollama.py
src/hearth/routes/: admin.py  v1.py  webui.py
src/hearth/webui/: index.html
tests/: smoke_live.py  test_cli.py  test_config.py  test_hardware.py  test_ollama_native.py  test_routes.py  test_security.py  test_webui.py
tools/: update_todays_commits.py
