[project]
name = "hearth"
version = "0.1.0"
description = "Hearth — a stable, OpenAI-compatible local AI engine on loopback. Fronts Ollama (and later llama.cpp/vLLM/faster-whisper) behind one HTTP API with a role registry, hardware probe, and tool-call repair."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "yumima" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
stt = [
    # M2: faster-whisper for /v1/audio/transcriptions. Installed into a
    # separate interpreter when the host Python lacks ctranslate2 wheels.
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
hearth = "hearth.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
