[project]
name = "hearth"
version = "0.1.0"
description = "Hearth — a stable, OpenAI-compatible local AI engine on loopback. Fronts Ollama (and later llama.cpp/vLLM/faster-whisper) behind one HTTP API with a role registry, hardware probe, and tool-call repair."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "yumima" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = [
    # Desktop chat window (`hearth gui`). pywebview wraps each OS's NATIVE
    # webview — WebView2 on Windows, WKWebView on macOS, WebKitGTK on Linux —
    # so there's no bundled browser; the chat UI is served by the gateway at
    # /app and shown in a chrome-less window. Optional: without it, `hearth gui`
    # falls back to a Chromium/Edge --app window or the default browser.
    "pywebview>=5.0",
]
stt = [
    # M2: faster-whisper for /v1/audio/transcriptions. Installed into a
    # separate interpreter when the host Python lacks ctranslate2 wheels.
    "faster-whisper>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
hearth = "hearth.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the chat UI + icon with the wheel (non-Python assets under the package).
hearth = ["webui/*.html", "assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
